# rsf_stats

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/rsf_stats/: __init__.py  app.py  client.py  config.py  log.py  models.py  scraper.py  service.py  storage.py  templating.py  translations.py
src/rsf_stats/static/: app.css
src/rsf_stats/templates/: analysis.html  base.html  compare.html  compete.html  error.html  overview.html  stage.html  stages.html  status.html
tests/: test_app.py  test_scraper.py  test_service.py  test_storage.py
tests/fixtures/: drvtimes_sample.html  leaderboard_sample.html
