[project]
name = "rsf-stats"
version = "0.1.0"
description = "Web dashboard for my RallySimFans (RBR) stats: per-stage completion status and reference time."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Francois Dazan" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
    "selectolax>=0.3.25",
    "jinja2>=3.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
]

[project.scripts]
rsf-stats = "rsf_stats.app:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rsf_stats"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
